--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,14 +4,58 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
+            "label": "build-Clang",
             "type": "shell",
             "command": "clang++.exe -stdlib=libc++ -std=c++14 -pedantic -Wall sample.cpp -o sample.exe",
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
-            
-        }
+        },
+        {
+            "label": "build-g++",
+            "type": "shell",
+            "command": "g++ -std=c++1z anotherSample.cpp -o anotherSample.exe",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": "$gcc",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared"
+            },
+        },
+        {
+            "label": "build-java8",
+            "command": "javac",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared"
+            },
+            "type": "shell",
+            "args": [
+                "${workspaceRoot}\\*.java"
+            ]
+        },
+        {
+            "label": "run-java",
+            "command": "java",
+            "type": "shell",
+            "args": [
+                "-cp .",
+                "HelloClass"
+            ],
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared"
+            },
+        },
     ]
 }
