--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -57,5 +57,19 @@
                 "panel": "shared"
             },
         },
+        {
+            "label": "buildrun-java8",
+            "command": "javac",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared"
+            },
+            "type": "shell",
+            "args": [
+                "*.java | java -cp . HelloClass"
+            ]
+        },
     ]
 }
